2018-09-26  NIIBE Yutaka  <gniibe@fsij.org>

	Fix for chopstx_intr_done.  No spurious interrupts.
	* contrib/adc-mkl27z.c (adc_wait_completion): Fix.
	* contrib/adc-stm32f103.c (adc_wait_completion): Likewise.
	* contrib/usart-stm32f103.c (usart_main): Likewise.
	* example-cdc-gnu-linux/usb-cdc.c (tty_main): Likewise.
	* example-cdc/usb-cdc.c (tty_main): Likewise.
	* example-fraucheky/main.c (usb_main): Likewise.
	* example-fs-bb48/touch.c (touch_get): Likewise.
	* example-fs-bb48/usb-cdc.c (tty_main): Likewise.
	* example-primer2/primer2-ts.c (adc3_conversion): Likewise.
	* example-usb-serial/usb-cdc.c (cdc_main): Likewise.

2018-09-26  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.h (chopstx_intr_done): New function.
	* chopstx.c (chopstx_intr_done): New function.
	(chopstx_poll): Don't call chx_clr_intr.
	Ensure data memory barrier for interrupt handling.

	* chopstx-cortex-m.c (chx_dmb): New static function.
	* chopstx-gnu-linux.c (chx_dmb): Ditto.

2018-09-21  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/stm32.h (struct GPIO, struct FLASH): Moved from...
	* mcu/clk_gpio_init-stm32.c: ... here.
	(AFIO_MAPR_SWJ_CFG_JTAGDISABLE): Move to ...
	* mcu/stm32f103.h: ... here.
	* mcu/sys-stm32f103.c: Don't include "mcu/cortex-m.h".

	* board/board-fst-01sz.h: New.
	* mcu/sys-stm32f103.h (BOARD_ID_FST_01SZ): New.
	* contrib/adc-stm32f103.c (get_adc_config): Add BOARD_ID_FST_01SZ.

2018-08-20  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/usb-stm32f103.c (usb_lld_ctrl_send): Fix for ZLP.
	* mcu/usb-usbip.c (usb_lld_ctrl_send): Likewise.
	* mcu/usb-mkl27z.c (usb_lld_ctrl_send): Likewise.

2018-05-09  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.9.
	* doc/chopstx.texi (VERSION): 1.9.

2018-05-08  NIIBE Yutaka  <gniibe@fsij.org>

	* board/board-blue-pill.h (GPIO_USB_SET_TO_ENABLE): Remove.

	* doc/chopstx.texi (Compile-time macro): New chapter.

	* mcu/sys-stm32f103.c (usb_lld_sys_init): Use MHZ.
	(flash_protect): Fix for GD32F103.

2018-04-26  NIIBE Yutaka  <gniibe@fsij.org>
