@@ -36,12 +36,8 @@
 #define RCC_ENR_IOP_EN      RCC_APB2ENR_IOPAEN
 #define RCC_RSTR_IOP_RST    RCC_APB2RSTR_IOPARST
 
-#if 0 /* For PA, AFIO setting is not needed.  */
-#define AFIO_EXTICR_INDEX     0
-#define AFIO_EXTICR1_EXTIx_Py AFIO_EXTICR1_EXTI3_PA
-#endif
-
-#define EXTI_PR               EXTI_PR_PR3
-#define EXTI_IMR              EXTI_IMR_MR3
-#define EXTI_RTSR_TR          EXTI_RTSR_TR3
-#define INTR_REQ_EXTI         EXTI3_IRQ
+/*
+ * Board specific information other than clock and GPIO initial
+ * setting should not be in board-*.h, but each driver should include
+ * such specific information by itself.
+ */
