@@ -6,11 +6,16 @@ NEWS - Noteworthy changes
   Released 2018-09-XX
 
 ** Function chopstx_intr_wait is not deprecated, now.
-Once, it was said that it's deprecated, but it's active again.
+Once, it was said that it's deprecated, but it's active again
+to match the new function of chopstx_intr_done.
 
 ** API change: chopstx_poll, chopstx_intr_wait, chopstx_intr_done
 To avoid spurious interrupt, we introduce new function
 chopstx_intr_done, which should be called after interrupt handling.
+
+** New driver: Acknowledge button for FST-01SZ
+Use case is waiting user's acknowledge.  We use EXTI interrupt feature
+of STM32.
 
 
 * Major changes in Chopstx 1.9
